Assets are added. Need other tab changes

--- a/DesigningCritMoves/index.html
+++ b/DesigningCritMoves/index.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
         </div>
-        <footer>
+        <footer>s
             <a class="text-start float-start" href="#" style="color: rgb(255,255,255);padding-top: 10px;">Terms and Conditons</a>
             <p class="fs-5 text-end float-end" style="color: rgb(255,255,255);">@2022</p>
         </footer>
