--- a/DesigningCritMoves/AdminPagePrompts.html
+++ b/DesigningCritMoves/AdminPagePrompts.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
+
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
@@ -10,42 +10,44 @@
         <link rel="stylesheet" href="assets/css/stylesIndex.css">
         <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     </head>
-</head>
-<body>
-    <div class='tabs-x tabs-above'>
-        <ul id="myTab-tabs-above" class="nav nav-tabs" role="tablist">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="myTabDrop-tabs-above" data-bs-toggle="dropdown" role="button" title="Menu details" aria-haspopup="true aria-expanded="false">
-                    <span class="nav-link-text"><i class="fa fa-list-alt"></i> Menu</span>
-                </a>
-                <div class="dropdown-menu" role="menu" aria-labelledby="myTabDrop-tabs-above">
-                    <a class="dropdown-item" id="dropdown-tab-tabs-above-1" href="#dropdown-tabs-above-1" tabindex="-1" title="Menu option 1" role="tab" data-bs-toggle="tab" aria-controls="dropdown-tabs-above-1">
-                        <i class="fas fa-chevron-circle-right"></i> Option 1
+    <body>
+        <div class="container" id="mainLogo">
+            <img src="assets/img/MainLogo.png" />
+        </div>
+        <div class='tabs-x tabs-above'>
+            <ul id="myTab-tabs-above" class="nav nav-tabs" role="tablist">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="myTabDrop-tabs-above" data-bs-toggle="dropdown" role="button" title="Menu details" aria-haspopup="true aria-expanded="false">
+                        <span class="nav-link-text"><i class="fa fa-list-alt"></i> Edit Prompts and Categories</span>
                     </a>
-                    <a class="dropdown-item" id="dropdown-tab-tabs-above-2" href="#dropdown-tabs-above-2" tabindex="-1" title="Menu option 2" role="tab" data-bs-toggle="tab" aria-controls="dropdown-tabs-above-2">
-                        <i class="fas fa-chevron-circle-right"></i> Option 2
+                    <div class="dropdown-menu" role="menu" aria-labelledby="myTabDrop-tabs-above">
+                        <a class="dropdown-item" id="dropdown-tab-tabs-above-1" href="#dropdown-tabs-above-1" tabindex="-1" title="Menu option 1" role="tab" data-bs-toggle="tab" aria-controls="dropdown-tabs-above-1">
+                            <i class="fas fa-chevron-circle-right"></i> Prompts
+                        </a>
+                        <a class="dropdown-item" id="dropdown-tab-tabs-above-2" href="#dropdown-tabs-above-2" tabindex="-1" title="Menu option 2" role="tab" data-bs-toggle="tab" aria-controls="dropdown-tabs-above-2">
+                            <i class="fas fa-chevron-circle-right"></i> Option 2
+                        </a>
+                <li class="nav-item">
+                    <a class="nav-link active" id="home-tab-tabs-above" href="#home-tabs-above" role="tab" data-bs-toggle="tab" title="Home tab" aria-controls="home-kv-1" aria-selected="true">
+                        <i class="fas fa-home"></i> Home
                     </a>
-            <li class="nav-item">
-                <a class="nav-link active" id="home-tab-tabs-above" href="#home-tabs-above" role="tab" data-bs-toggle="tab" title="Home tab" aria-controls="home-kv-1" aria-selected="true">
-                    <i class="fas fa-home"></i> Home
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" id="profile-tab-tabs-above" href="#profile-tabs-above" role="tab-kv" data-bs-toggle="tab" title="Profile details" aria-controls="profile">
-                    <span class="nav-link-text"><i class="fa fa-user"></i> Profile</span>
-                </a>
-            </li>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="profile-tab-tabs-above" href="#profile-tabs-above" role="tab-kv" data-bs-toggle="tab" title="Profile details" aria-controls="profile">
+                        <span class="nav-link-text"><i class="fa fa-user"></i> Profile</span>
+                    </a>
+                </li>
 
-    </div>
-    </li>
-    </ul>
-    <div id="myTabContent-tabs-above" class="tab-content">
-        <div class="tab-pane fade show active" id="home-tabs-above" role="tabpanel" aria-labelledby="home-tab-tabs-above"><p>...</p></div>
-        <div class="tab-pane fade" id="profile-tabs-above" role="tabpanel" aria-labelledby="profile-tabs-above"><p>...</p></div>
-        <div class="tab-pane fade" id="dropdown-tabs-above-1" role="tabpanel" aria-labelledby="dropdown-tab-tabs-above-1"><p>...</p></div>
-        <div class="tab-pane fade" id="dropdown-tabs-above-2" role="tabpanel" aria-labelledby="dropdown-tab-tabs-above-2"><p>...</p></div>
-        <div class="tab-pane fade" id="disabled-tabs-above" role="tabpanel" aria-labelledby="disabled-tab-tabs-above">Disabled Content</div>
-    </div>
-    </div>
-</body>
+        </div>
+        </li>
+        </ul>
+        <div id="myTabContent-tabs-above" class="tab-content">
+            <div class="tab-pane fade show active" id="home-tabs-above" role="tabpanel" aria-labelledby="home-tab-tabs-above"><p>...</p></div>
+            <div class="tab-pane fade" id="profile-tabs-above" role="tabpanel" aria-labelledby="profile-tabs-above"><p>...</p></div>
+            <div class="tab-pane fade" id="dropdown-tabs-above-1" role="tabpanel" aria-labelledby="dropdown-tab-tabs-above-1"><p>...</p></div>
+            <div class="tab-pane fade" id="dropdown-tabs-above-2" role="tabpanel" aria-labelledby="dropdown-tab-tabs-above-2"><p>...</p></div>
+            <div class="tab-pane fade" id="disabled-tabs-above" role="tabpanel" aria-labelledby="disabled-tab-tabs-above">Disabled Content</div>
+        </div>
+        </div>
+    </body>
 </html>
