--- a/DesigningCritMoves/index.html
+++ b/DesigningCritMoves/index.html
@@ -6,7 +6,7 @@
     <title>Crit Moves</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Albert+Sans&amp;display=swap">
-    <link rel="stylesheet" href="assets/css/stylesIndex.css">
+    <link href="assets/css/stylesIndex.css" rel="stylesheet" />
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </head>
 
