--- a/DesigningCritMoves/index.html
+++ b/DesigningCritMoves/index.html
@@ -45,7 +45,7 @@
 </html>
 
 <script>
-    openAdminPrompt(){
+    openAdminPrompt(); {
         window.open('AdminPrompt.aspx', true);
     }
 </script>
