--- a/DesigningCritMoves/index.html
+++ b/DesigningCritMoves/index.html
@@ -37,7 +37,7 @@
         </div>
     </div>
     <footer>
-        <a class="text-start float-start" href="#" style="color: rgb(255,255,255);padding-top: 10px;">Terms and Conditons</a>
+        <a class="text-start float-start" href="#" style="color: rgb(255,255,255);padding-top: 10px;">Terms and Conditions</a>
         <p class="fs-5 text-end float-end" style="color: rgb(255,255,255);">@2022</p>
     </footer>
 
