--- a/DesigningCritMoves/index.html
+++ b/DesigningCritMoves/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Crit Moves</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Albert+Sans&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Plus Jakarta Sans" />
     <link href="assets/css/stylesIndex.css" rel="stylesheet" />
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </head>
